Fixed alignment of Candidate List Component

--- a/src/app/candidate/candidate-list/candidate-list.component.scss
+++ b/src/app/candidate/candidate-list/candidate-list.component.scss
@@ -1,6 +1,10 @@
 .candidate-list,
 .responsive-candidate-list {
-    padding: 0px 18px;
+    padding: 0px 15px;
+
+    h2 {
+        color: #25364D;
+    }
 
     .reset {
         color: #FF715A !important;
@@ -20,7 +24,10 @@
         border-radius: 4px;
         color: black;
         margin-right: 10px;
-
+        .mat-select{
+            padding:0px!important;
+            height:10px;
+        }
     }
 
     .sort-by.mat-icon.arrow {
@@ -43,11 +50,11 @@
         color: #1F47F5;
     }
 
-    .avatar {
-        // height:50px;
-        // width:50px;
-        border-radius: 50%;
-    }
+    // .avatar {
+    //     height:100px;
+    //     width:100px;
+    //     border-radius: 50%;
+    // }
 
     .material-icons {
         // font-size: 16px;
@@ -74,7 +81,7 @@
         }
 
         .candidate-details {
-            padding: 20px;
+            padding: 25px 20px 15px 20px;
         }
 
 
@@ -149,15 +156,6 @@
         padding: 1px 12px;
         border: 1px solid #E3E3E3;
         color: var(--darkgrey);
-    }
-
-    .filter-list {
-        border: 1px solid #84818A;
-        border-radius: 4px;
-        padding: 2px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
     }
 
     .icon-cross {
@@ -273,16 +271,16 @@
 }
 
 .see-less-more {
-        // font-size: 16px;
-        // line-height: 16px;
-        height: auto;
-        overflow: hidden;
-    }
+    // font-size: 16px;
+    // line-height: 16px;
+    height: auto;
+    overflow: hidden;
+}
 
 .see {
-        overflow: visible;
-        height: auto;
-    }
+    overflow: visible;
+    height: auto;
+}
 
 .seeFirst {
     overflow: visible;
@@ -314,10 +312,27 @@
 }
 
 .more_vert {
-    margin-left: -15px;
+    // margin-left: -15px;
 }
 
-@media(max-width:700px) {
+.more-vert.mat-icon-button {
+    padding: 0;
+    min-width: 0;
+    width: auto;
+    height: 10px;
+    flex-shrink: 0;
+    line-height: 10px;
+    border-radius: 50%;
+}
+
+
+@media(max-width:1200px) {
+    .avatar {
+        height: 80px;
+        width: 80px;
+        margin: auto;
+    }
+
     .see-less-more {
         // font-size: 16px;
         // line-height: 16px;
@@ -326,9 +341,9 @@
     }
 
     .see {
-            overflow: visible;
-            height: auto;
-        }
+        overflow: visible;
+        height: auto;
+    }
 
     .seeFirst {
         overflow: visible;
