--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -27,7 +27,7 @@
   flex-direction: row;
   align-items: center;
   box-sizing: border-box;
-  padding: 0 7px!important;
+  padding: 0 6px!important;
   position: relative;
   height: inherit;
 }
@@ -54,13 +54,14 @@ mat-icon {
 }
 
 .ellipse1 {
-  margin-right: 25px;
+  margin-right: 0px;
+  margin-left:-8px;
 }
 
 .ellipse2 {
+  z-index:99;
   margin-top: 27px;
   margin-left: 0px;
-  z-index: 1;
 }
 
 .mat-card-avatar {
